[tool.poetry]
name = "crtshapi"
version = "0.1.0"
description = ""
authors = ["eonraider <livewire_voodoo@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
pytest-mock = "^3.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
